--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,7 @@
 header .yellow {
   background-color: yellow;
   width: 100%;
-  height: 150px
-  /*height: 20vh;*/
+  height: 150px;
 }
 /* Fine Header */
 
